--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node_modules/.bin/npm-run-all -p webpack:w server-dev sass:w",
+    "start": "node server",
+    "dev": "node_modules/.bin/npm-run-all -p webpack:w server-dev sass:w",
     "webpack": "node_modules/.bin/webpack --mode=deployment ",
     "webpack:w": "node_modules/.bin/webpack --mode=development -w",
     "server-dev": "node_modules/.bin/nodemon server.js",
     "server": "node server.js",
     "sass": "node_modules/.bin/node-sass --output-style compressed src/style.sass public/style.css",
     "sass:w": "node_modules/.bin/node-sass --output-style compressed -rw src/style.sass public/style.css",
-    "build": "node_modules/.bin/npm-run-all -p webpack server",
+    "build": "node_modules/.bin/npm-run-all -p webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
