--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "isomorphic-fetch": "^2.2.1",
+    "nodemailer": "^5.1.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
